# bspviewer

./: .gitignore  CMakeLists.txt  README.markdown  README.md
src/: bsp.cpp  bsp.hpp  filestream.cpp  filestream.hpp  frutsum.cpp  frutsum.hpp  glwidget.cpp  glwidget.hpp  main.cpp  shaders.inc
